@@ -1,3 +1,8 @@
+2005-04-08 AIDA Shinra <shinra@j10n.org>
+* sedsrc/sys-xinitrc-fink.in: introduce @XINITDIR@ and @X_BINDIR@
+  for fix-apple-x11
+* build.sh: ditto
+
 2005-03-30 AIDA Shinra <shinra@j10n.org>
 * 1.0 release
 * build.sh: add "x" at case expressions. cosmetic.
@@ -58,4 +63,4 @@
 2004-05-04 AIDA Shinra <shinra@j10n.org>
 * Initial revision. Automated update of system xinitrc is not yet done.
 
-$Id: ChangeLog,v 1.1 2005/04/07 12:31:26 aida_s Exp $
+$Id: ChangeLog,v 1.2 2005/04/08 20:44:32 aida_s Exp $
